# cartesio_xbot2

./: CMakeLists.txt
config/: centauro_cartesio.yaml  centauro_stack.yaml
src/: cartesio_rt.cpp  cartesio_rt.h
